# rust-stdf

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust_ubuntu.yml
demo_stdf/: lot2.stdf.bz2  lot3.stdf.bz2
example/: atdf_example.rs  stdf_to_xlsx.rs
src/: atdf_file.rs  atdf_types.rs  lib.rs  main.rs  stdf_error.rs  stdf_file.rs  stdf_types.rs
tests/: record_serialize_test.rs  stdf_file_tests.rs  stdf_record_tests.rs
