[package]
name = "rust-stdf"
authors = ["noonchen <chennoon233@foxmail.com>"]
description = "A library for parsing Standard Test Data Format (STDF) files of version V4 and V4-2007."
repository = "https://github.com/noonchen/rust-stdf"
documentation = "https://docs.rs/rust-stdf/"
readme = "README.md"
license = "MIT"
version = "0.2.2"
edition = "2021"
keywords = ["stdf", "atdf", "semiconductor", "parse"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
flate2 = "1.0.24"
bzip2 = "0.4.3"
smart-default = "0.6.0"
chrono = "0.4.22"
hex = "0.4.3"

[dev-dependencies]
rand = "0.8.5"