[package]
name = "rust-stdf"
authors = ["noonchen <chennoon233@foxmail.com>"]
description = "A library for parsing Standard Test Data Format (STDF) files of version V4 and V4-2007."
repository = "https://github.com/noonchen/rust-stdf"
documentation = "https://docs.rs/rust-stdf/"
readme = "README.md"
license = "MIT"
version = "0.3.0"
edition = "2021"
keywords = ["stdf", "atdf", "semiconductor", "parse"]
exclude = ["/demo_stdf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
smart-default = "0.6.0"
flate2 = { version = "1.0.24", optional = true}
bzip2 = { version = "0.4.3", optional = true}
zip = { version = "0.6.3", default-features = false, features = [ "deflate", "bzip2" ], optional = true }
chrono = { version = "0.4.22", optional = true}
hex = { version = "0.4.3", optional = true }
serde = { version = "1.0.147", features = ["derive"], optional = true}

[dev-dependencies]
rand = "0.8.5"
serde_json = "1.0.87"

[features]
gzip = ["flate2"]
bzip = ["bzip2"]
zipfile = ["zip"]
atdf = [ "chrono", "hex" ]
serialize = ["serde"]
default = [ "gzip", "bzip" ]